Revert "page content no longer cut off without line breaks at end"
This reverts commit bb4376b4338fc50ab3bcb53c9135fb0decb01667.

--- a/autoscheduler/frontend/src/components/App/App.css
+++ b/autoscheduler/frontend/src/components/App/App.css
@@ -14,7 +14,3 @@
     display: flex;
     flex-direction: column;
 }
-
-.scroll {
-    overflow: auto;
-}
